# openhr-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  evaluation_case.yml  feature_request.yml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py
apps/api/app/: main.py
apps/web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.test.ts  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  styles.css
docs/: architecture.md  data-privacy.md  demo-guide.md  evaluation.md  release-checklist.md  retrieval.md  roadmap.md  routing.md  safety.md
examples/: sample-questions.json  synthetic-employees.json
knowledge/fictional_company/: attendance-policy.md  benefits-policy.md  general-workplace-policy.md  learning-development-policy.md  leave-policy.md  onboarding-guide.md
tests/: test_agent_workflow.py  test_api.py  test_evaluation.py  test_health.py  test_mock_provider.py
