[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openhr-agent"
version = "0.1.0"
description = "Safe, modular, evaluable HR AI agent reference framework"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "pydantic>=2.9,<3", "uvicorn[standard]>=0.30,<1"]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "mypy>=1.11,<2", "pytest>=8.3,<9", "ruff>=0.6,<1"]

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
